--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="carrocaoapp"/>
+        <data android:scheme="exp+carrocaoapp"/>
       </intent-filter>
     </activity>
   </application>
