--- a/biome.json
+++ b/biome.json
@@ -1,31 +1,49 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
     "useIgnoreFile": false
   },
   "files": {
-    "ignore": ["node_modules"]
+    "experimentalScannerIgnores": ["node_modules"]
   },
   "formatter": {
     "indentStyle": "space",
     "indentWidth": 2,
     "lineWidth": 80
   },
-
-  "organizeImports": {
-    "enabled": true
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": {
+          "level": "on",
+          "options": {
+            "groups": [
+              [":NODE:"],
+              ":BLANK_LINE:",
+              [":PACKAGE:"],
+              ":BLANK_LINE:",
+              "@*/**"
+            ]
+          }
+        }
+      }
+    }
   },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "style": {
+        "noNonNullAssertion": "off",
         "noUnusedTemplateLiteral": "off",
         "useImportType": {
           "fix": "safe",
-          "level": "error"
+          "level": "error",
+          "options": {
+            "style": "inlineType"
+          }
         }
       },
       "a11y": {
@@ -54,7 +72,6 @@
   },
   "overrides": [
     {
-      "include": ["./src/http/**"],
       "linter": {
         "rules": {
           "suspicious": {
