--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@gorhom/bottom-sheet": "^5.1.6",
     "@hookform/resolvers": "^5.0.1",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.80.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.13",
+    "expo": "^53.0.19",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
@@ -35,9 +37,9 @@
     "lucide-react-native": "^0.511.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-keyboard-controller": "^1.17.3",
+    "react-native-keyboard-controller": "^1.17.5",
     "react-native-mask-text": "^0.14.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.17.4",
@@ -51,7 +53,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.1.2",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
